--- a/Css/style.css
+++ b/Css/style.css
@@ -233,34 +233,83 @@ body {
   font-weight: 500;
   color: var(--yellow_color);
 }
-.ViewPartRightOverlayerWrapper{
-margin-top: 129px;
-margin-left: 56px;
-row-gap: 10px;
+.ViewPartRightOverlayerWrapper {
+  margin-top: 129px;
+  margin-left: 56px;
+  row-gap: 10px;
+}
+/* .ViewPartRight{
+  position: relative;
+} */
+.ViewPartRightWrapper {
+  position: relative;
+  height: 268px;
 }
 .ViewPartRightWebsite {
-  position: relative;
+  position: absolute;
+  top: -16px;
+  left: 0;
   width: 405px;
   height: 284px;
 }
 .ViewPartRightWebsiteOverlayer {
   position: absolute;
-  bottom: 0;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-image: linear-gradient(rgb(28, 30, 83), rgb(28, 30, 83, 42%));
 }
-.ViewPartRightWebsiteOverlayer__Header{
+.ViewPartRightWebsiteOverlayer__Header {
   font-size: 24px;
   font-weight: 600;
   color: var(--white_color);
   line-height: 36px;
   width: 235px;
 }
-.ViewPartRightWebsiteOverlayer__link{
+.ViewPartRightWebsiteOverlayer__link {
   font-size: 16px;
   font-weight: 500;
   color: var(--yellow_color);
 }
+.ViewPartRightJoinCurch {
+  margin-top: 48px;
+}
 /* ================ View Css ================ */
+/* ================ SolvesProblem Css ================ */
+#SolvesProblem {
+  padding: 128px 0;
+  background-color: var(--secondary_Background_color);
+}
+
+.SolvesProblemHeader__SubTitle {
+  font-size: 16px;
+  font-family: 500;
+  color: var(--black_color);
+}
+.SolvesProblemHeader__Title {
+  font-size: 48px;
+  font-weight: 600;
+  max-width: 630px;
+  line-height: 64px;
+  color: var(--black_color);
+}
+.SolvesProblemItem {
+  padding: 58px 0 48px 48px;
+
+  background-color: var(--white_color);
+}
+.SolvesProblemItem__Icon {
+  font-size: 2rem;
+}
+.SolvesProblemItem__Header {
+  font-size: 24px;
+  font-weight: 500;
+  color: var(--black_color);
+}
+.SolvesProblemItem__Summary {
+  font-size: 16px;
+  font-weight: 400;
+  color: var(--black_color);
+}
+/* ================ SolvesProblem Css ================ */
