--- a/Css/style.css
+++ b/Css/style.css
@@ -180,102 +180,125 @@ body {
 }
 /* ================ Work Css ================ */
 /* ================ View Css ================ */
-#View {
+/* #View {
   padding: 128px 0;
   background-color: var(--white_color);
-}
-.ViewPartHeading_Title {
+} */
+/* .ViewPartHeading_Title {
   font-size: 48px;
   font-weight: 600;
   color: var(--black_color);
-}
-.ViewPartHeading__ViewMore {
+} */
+/* .ViewPartHeading__ViewMore {
   font-size: 16px;
   font-weight: 500;
   color: var(--black_color);
-}
-.ViewPartLeftRightWrapper {
+} */
+/* .ViewPartLeftRightWrapper {
   margin-top: 64px;
-}
+} */
 
-.ViewPartLeft {
+/* .ViewPartLeft {
   position: relative;
-}
-.ViewPartLeftOverlayer {
+} */
+/* .ViewPartLeftOverlayer {
   position: absolute;
   left: 0;
   bottom: 0;
   height: 100%;
   width: 396px;
   background-image: linear-gradient(rgb(28, 30, 83), rgb(28, 30, 83, 42%));
-}
-.ViewPartLeftOverlayerWrapper {
+} */
+/* .ViewPartLeftOverlayerWrapper {
   display: flex;
   flex-direction: column;
   margin-top: 312px;
   margin-left: 48px;
-}
-.ViewPartLeftOverlayer__Heading {
+} */
+/* .ViewPartLeftOverlayer__Heading {
   font-size: 24px;
   font-weight: 600;
   color: var(--white_color);
   line-height: 36px;
-}
-.ViewPartLeftOverlayer__summary {
+} */
+/* .ViewPartLeftOverlayer__summary {
   margin-top: 16px;
   font-size: 16px;
   font-weight: 500;
   color: var(--white_color);
   line-height: 28px;
-}
-.ViewPartLeftOverlayer__link {
+} */
+/* .ViewPartLeftOverlayer__link {
   font-size: 16px;
   font-weight: 500;
   color: var(--yellow_color);
-}
-.ViewPartRightOverlayerWrapper {
+} */
+/* .ViewPartRightOverlayerWrapper {
   margin-top: 129px;
   margin-left: 56px;
   row-gap: 10px;
-}
+} */
 /* .ViewPartRight{
   position: relative;
 } */
-.ViewPartRightWrapper {
+/* .ViewPartRightWrapper {
   position: relative;
   height: 268px;
-}
-.ViewPartRightWebsite {
+} */
+/* .ViewPartRightWebsite {
   position: absolute;
   top: -16px;
   left: 0;
   width: 405px;
   height: 284px;
-}
-.ViewPartRightWebsiteOverlayer {
+} */
+/* .ViewPartRightWebsiteOverlayer {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-image: linear-gradient(rgb(28, 30, 83), rgb(28, 30, 83, 42%));
-}
-.ViewPartRightWebsiteOverlayer__Header {
+} */
+/* .ViewPartRightWebsiteOverlayer__Header {
   font-size: 24px;
   font-weight: 600;
   color: var(--white_color);
   line-height: 36px;
   width: 235px;
-}
-.ViewPartRightWebsiteOverlayer__link {
+} */
+/* .ViewPartRightWebsiteOverlayer__link {
   font-size: 16px;
   font-weight: 500;
   color: var(--yellow_color);
-}
-.ViewPartRightJoinCurch {
+} */
+/* .ViewPartRightJoinCurch {
   margin-top: 48px;
-}
+} */
 /* ================ View Css ================ */
+/* ================ View Css2 ================ */
+#View {
+  padding: 128px 0;
+  background-color: var(--white_color);
+}
+.ViewPartHeader__Title {
+  font-size: 48px;
+  font-weight: 600;
+  color: var(--black_color);
+}
+.ViewPartHeaderSubTitle {
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--black_color);
+}
+.ViewPartWorkhub {
+  position: relative;
+}
+.ViewPartWorkhubOverlayer {
+  background-image: linear-gradient(#1c1e53, rgb(28, 30, 83, 42%));
+  width: 100%;
+}
+/* ================ View Css2 ================ */
 /* ================ SolvesProblem Css ================ */
 #SolvesProblem {
   padding: 128px 0;
