--- a/Css/style.css
+++ b/Css/style.css
@@ -334,3 +334,25 @@ body {
 }
 
 /* =========== ClientSays CSS =========== */
+/* =========== Frequently CSS =========== */
+#Frequently {
+  background-color: var(--white_color);
+  padding: 128px 0;
+}
+.FrequentlyLeft {
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
+  padding-right: 83px;
+}
+.FrequentlyLeft__title{
+  font-size: 38px;
+  font-weight: 600;
+  line-height: 56px;
+}
+.FrequentlyLeft__Linked {
+  font-size: 18px;
+  font-weight: 500;
+  color: #2405f2;
+}
+/* =========== Frequently CSS =========== */
